--- a/indexStyle/_nav.scss
+++ b/indexStyle/_nav.scss
@@ -182,6 +182,11 @@
                 font-size: 20px !important;
             }
         }
+        .for_divider {
+            img {
+                width: 80% !important;
+            }
+        }
     }
 }
 @media only screen and (max-width:560px) {
@@ -193,8 +198,13 @@
     .navbar_content_inner {
         .for_content {
             p {
-                font-size: 16px !important;
+                font-size: 14px !important;
                 font-weight: 400 !important;
+            }
+        }
+        .for_divider {
+            img {
+                width: 80% !important;
             }
         }
     }
