--- a/indexStyle/_nav.scss
+++ b/indexStyle/_nav.scss
@@ -41,13 +41,14 @@
                                 font-family: "Merriweather", serif;
                                 font-weight: 400;
                                 font-size: 14px;
+                                &:hover {
+                                    border: 1px solid rgb(87, 86, 86);
+                                    padding: 5px;
+                                }
                             }
                             a.active:focus {
-                                width: 70px;
-                                height: 40px;
                                 border: 1px solid rgb(87, 86, 86);
-                                padding-left: 14px;
-                                padding-top: 6px;
+                                padding: 5px;
                             }
                         }
                     }
