About us page completed with responsive

--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,4 @@
 @forward "indexStyle/nav.scss";
 @forward "indexStyle/greensBeetrootSocial.scss";
 @forward "indexStyle/special.scss";
+@forward "indexStyle/aboutUs.scss";
