Menu cart title with responsive complete

--- a/index.scss
+++ b/index.scss
@@ -2,3 +2,4 @@
 @forward "indexStyle/greensBeetrootSocial.scss";
 @forward "indexStyle/special.scss";
 @forward "indexStyle/aboutUs.scss";
+@forward "indexStyle/menuCart.scss";
