--- a/indexStyle/_menuCart.scss
+++ b/indexStyle/_menuCart.scss
@@ -80,6 +80,10 @@
                     border: 2px solid rgb(90, 90, 90);
                     padding: 2px;
                 }
+                &.active {
+                    border: 2px solid rgb(90, 90, 90);
+                    padding: 2px;
+                }
             }
         }
         .menu_container {
