--- a/index.scss
+++ b/index.scss
@@ -3,3 +3,4 @@
 @forward "indexStyle/special.scss";
 @forward "indexStyle/aboutUs.scss";
 @forward "indexStyle/menuCart.scss";
+@forward "indexStyle/contact.scss";
